// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Pagination/PaginationMenu should render a button and menu with 1 menu items 1`] = `
<DropdownMenu
  className="bdl-Pagination-dropdown"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={true}
>
  <Button
    className="bdl-Pagination-toggle"
    isLoading={false}
    showRadar={false}
    type="submit"
  >
    <FormattedMessage
      defaultMessage="{pageNumber} of {pageCount}"
      id="be.pagination.pageStatus"
      values={
        Object {
          "pageCount": 1,
          "pageNumber": 1,
        }
      }
    />
  </Button>
  <Menu
    className="bdl-Pagination-dropdownMenu"
    isHidden={false}
    isSubmenu={false}
  >
    <MenuItem
      isDisabled={true}
      key="1"
      onClick={[Function]}
    >
      1
    </MenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`elements/Pagination/PaginationMenu should render a button and menu with 5 menu items 1`] = `
<DropdownMenu
  className="bdl-Pagination-dropdown"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={true}
>
  <Button
    className="bdl-Pagination-toggle"
    isLoading={false}
    showRadar={false}
    type="submit"
  >
    <FormattedMessage
      defaultMessage="{pageNumber} of {pageCount}"
      id="be.pagination.pageStatus"
      values={
        Object {
          "pageCount": 5,
          "pageNumber": 1,
        }
      }
    />
  </Button>
  <Menu
    className="bdl-Pagination-dropdownMenu"
    isHidden={false}
    isSubmenu={false}
  >
    <MenuItem
      isDisabled={true}
      key="1"
      onClick={[Function]}
    >
      1
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="2"
      onClick={[Function]}
    >
      2
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="3"
      onClick={[Function]}
    >
      3
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="4"
      onClick={[Function]}
    >
      4
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="5"
      onClick={[Function]}
    >
      5
    </MenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`elements/Pagination/PaginationMenu should render a button and menu with 10 menu items 1`] = `
<DropdownMenu
  className="bdl-Pagination-dropdown"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={true}
>
  <Button
    className="bdl-Pagination-toggle"
    isLoading={false}
    showRadar={false}
    type="submit"
  >
    <FormattedMessage
      defaultMessage="{pageNumber} of {pageCount}"
      id="be.pagination.pageStatus"
      values={
        Object {
          "pageCount": 10,
          "pageNumber": 1,
        }
      }
    />
  </Button>
  <Menu
    className="bdl-Pagination-dropdownMenu"
    isHidden={false}
    isSubmenu={false}
  >
    <MenuItem
      isDisabled={true}
      key="1"
      onClick={[Function]}
    >
      1
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="2"
      onClick={[Function]}
    >
      2
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="3"
      onClick={[Function]}
    >
      3
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="4"
      onClick={[Function]}
    >
      4
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="5"
      onClick={[Function]}
    >
      5
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="6"
      onClick={[Function]}
    >
      6
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="7"
      onClick={[Function]}
    >
      7
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="8"
      onClick={[Function]}
    >
      8
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="9"
      onClick={[Function]}
    >
      9
    </MenuItem>
    <MenuItem
      isDisabled={false}
      key="10"
      onClick={[Function]}
    >
      10
    </MenuItem>
  </Menu>
</DropdownMenu>
`;
